# Hexascroller

./: Pi_Zero_W_installation.md  README.md
add-on/: Dockerfile  config.yaml  run.sh
esphome/: hexascroller.yaml
esphome/components/hexascroller/: hexascroller.cpp  hexascroller.h
hexascroller/: hexascroller.ino  hexascroller.pde  hfont.c  hfont.h  music.cpp  music.h  parsing.cpp  parsing.h
hexaservice/: asyncio-service.py  debug.py  fontutil.py  hexascroller.service  jsonsock.py  led_panel.py  pyproject.toml  requirements.txt  service.py
hexaservice/src/hexaservice/: __init__.py
hexasimulator/: Segment.pde  hexasimulator.pde
scripts/: id.py  image.py  message.py  panels.py  relay.py  socketcontrol.py
